# HueFlow

./: .gitignore  Cargo.toml  README.md
.ai/: INDEX.md  README.md
.github/workflows/: Ci-01_build&test.yml
hue_flow_cli/: Cargo.toml
hue_flow_cli/src/: audio_input.rs  main.rs
hue_flow_core/: Cargo.toml
hue_flow_core/src/: effects.rs  engine.rs  lib.rs  models.rs
hue_flow_core/src/api/: client.rs  discovery.rs  groups.rs
hue_flow_core/src/audio/: analyzer.rs
hue_flow_core/src/effects/: mod.rs
hue_flow_core/src/stream/: dtls.rs  manager.rs  protocol.rs
hue_flow_core/tests/: test_analyzer.rs
