[package]
name = "hue_flow_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
hue_flow_core = { path = "../hue_flow_core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
inquire = "0.7"

anyhow = "1"
cpal = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
