[package]
name = "hue_flow_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
hex = "0.4.3"
openssl = "0.10.75"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
spectrum-analyzer = "1.4.0"
